AUTOMAKE_OPTIONS = foreign

EXTRA_DIST = \
    Project/MgCommon.vcproj \
    Project/MgFDO.vcproj \
    Project/MgGeometry.vcproj \
    Project/MgSpatial.vcproj \
    Src/CommonNamespace.h \
    Src/CommonNamespace.h \
    Src/CommonUtilities.cpp \
    Src/CommonUtilities.h \
    Src/OSGeo/Common/stdafx.h \
    Src/OSGeo/Common/stdafx.cpp \
    Src/OSGeo/Common/resource.h \
    Src/OSGeo/Common/AssemblyInfo.cpp \
    Src/OSGeo/Common/AssemblyVersion.cpp \
    Src/OSGeo/Common/MgCommon.rc \
    Src/OSGeo/Common/mgDictionary.cpp \
    Src/OSGeo/Common/mgDictionary.h \
    Src/OSGeo/Common/mgDictionaryElement.cpp \
    Src/OSGeo/Common/mgDictionaryElement.h \
    Src/OSGeo/Common/mgException.cpp \
    Src/OSGeo/Common/mgException.h \
    Src/OSGeo/Common/mgGeometryType.h \
    Src/OSGeo/Common/mgIStreamReader.h \
    Src/OSGeo/Common/mgIStreamReaderImp.cpp \
    Src/OSGeo/Common/mgIStreamReaderImp.h \
    Src/OSGeo/Common/mgObjectFactory.cpp \
    Src/OSGeo/Common/mgObjectFactory.h \
    Src/OSGeo/Common/mgStringCollection.cpp \
    Src/OSGeo/Common/mgStringCollection.h \
    Src/OSGeo/Common/mgStringElement.cpp \
    Src/OSGeo/Common/mgStringElement.h \
    Src/OSGeo/Common/mgStringDictionary.cpp \
    Src/OSGeo/Common/mgStringDictionary.h \
    Src/OSGeo/Common/Gml212/mgSchema.cpp \
    Src/OSGeo/Common/Gml212/mgSchema.h \
    Src/OSGeo/Common/Io/VirtualFdoIoStream.cpp \
    Src/OSGeo/Common/Io/VirtualFdoIoStream.h \
    Src/OSGeo/Common/Io/mgIoByteStreamReader.cpp \
    Src/OSGeo/Common/Io/mgIoByteStreamReader.h \
    Src/OSGeo/Common/Io/mgIoCharStreamReader.cpp \
    Src/OSGeo/Common/Io/mgIoCharStreamReader.h \
    Src/OSGeo/Common/Io/mgIoFileStream.cpp \
    Src/OSGeo/Common/Io/mgIoFileStream.h \
    Src/OSGeo/Common/Io/mgIoMemoryStream.cpp \
    Src/OSGeo/Common/Io/mgIoMemoryStream.h \
    Src/OSGeo/Common/Io/mgIoStream.cpp \
    Src/OSGeo/Common/Io/mgIoStream.h \
    Src/OSGeo/Common/Io/mgIoTextReader.cpp \
    Src/OSGeo/Common/Io/mgIoTextReader.h \
    Src/OSGeo/Common/Io/mgIoTextWriter.cpp \
    Src/OSGeo/Common/Io/mgIoTextWriter.h \
    Src/OSGeo/Common/Xml/mgIXmlSaxHandler.h \
    Src/OSGeo/Common/Xml/mgXmlAttribute.cpp \
    Src/OSGeo/Common/Xml/mgXmlAttribute.h \
    Src/OSGeo/Common/Xml/mgXmlAttributeCollection.cpp \
    Src/OSGeo/Common/Xml/mgXmlAttributeCollection.h \
    Src/OSGeo/Common/Xml/mgXmlCharDataHandler.cpp \
    Src/OSGeo/Common/Xml/mgXmlCharDataHandler.h \
    Src/OSGeo/Common/Xml/mgXmlCopyHandler.cpp \
    Src/OSGeo/Common/Xml/mgXmlCopyHandler.h \
    Src/OSGeo/Common/Xml/mgXmlReader.cpp \
    Src/OSGeo/Common/Xml/mgXmlReader.h \
    Src/OSGeo/Common/Xml/mgXmlSaxContext.cpp \
    Src/OSGeo/Common/Xml/mgXmlSaxContext.h \
    Src/OSGeo/Common/Xml/mgXmlSaxHandler.cpp \
    Src/OSGeo/Common/Xml/mgXmlSaxHandler.h \
    Src/OSGeo/Common/Xml/mgXmlSkipElementHandler.cpp \
    Src/OSGeo/Common/Xml/mgXmlSkipElementHandler.h \
    Src/OSGeo/Common/Xml/mgXmlWriter.cpp \
    Src/OSGeo/Common/Xml/mgXmlWriter.h \
    Src/OSGeo/Common/Xml/VirtualSaxHandler.cpp \
    Src/OSGeo/Common/Xml/VirtualSaxHandler.h \
    Src/OSGeo/Common/Xsl/mgXslTransformer.cpp \
    Src/OSGeo/Common/Xsl/mgXslTransformer.h \
    Src/OSGeo/FDO/stdafx.cpp \
    Src/OSGeo/FDO/stdafx.h \
    Src/OSGeo/FDO/resource.h \
    Src/OSGeo/FDO/AssemblyVersion.cpp \
    Src/OSGeo/FDO/AssemblyInfo.cpp \
    Src/OSGeo/FDO/mgFDO.rc \
    Src/OSGeo/FDO/mgIConnectionManager.h \
    Src/OSGeo/FDO/mgIConnectionManagerImp.cpp \
    Src/OSGeo/FDO/mgIConnectionManagerImp.h \
    Src/OSGeo/FDO/mgIDisposableCollection.cpp \
    Src/OSGeo/FDO/mgIDisposableCollection.h \
    Src/OSGeo/FDO/mgIProviderRegistry.h \
    Src/OSGeo/FDO/mgIProviderRegistryImp.cpp \
    Src/OSGeo/FDO/mgIProviderRegistryImp.h \
    Src/OSGeo/FDO/mgObjectFactory.cpp \
    Src/OSGeo/FDO/mgObjectFactory.h \
    Src/OSGeo/FDO/ClientServices/mgConnectionManager.cpp \
    Src/OSGeo/FDO/ClientServices/mgConnectionManager.h \
    Src/OSGeo/FDO/ClientServices/mgFeatureAccessManager.cpp \
    Src/OSGeo/FDO/ClientServices/mgFeatureAccessManager.h \
    Src/OSGeo/FDO/ClientServices/mgProvider.cpp \
    Src/OSGeo/FDO/ClientServices/mgProvider.h \
    Src/OSGeo/FDO/ClientServices/mgProviderCollection.cpp \
    Src/OSGeo/FDO/ClientServices/mgProviderCollection.h \
    Src/OSGeo/FDO/ClientServices/mgProviderNameTokens.cpp \
    Src/OSGeo/FDO/ClientServices/mgProviderNameTokens.h \
    Src/OSGeo/FDO/ClientServices/mgProviderRegistry.cpp \
    Src/OSGeo/FDO/ClientServices/mgProviderRegistry.h \
    Src/OSGeo/FDO/Commands/DataStore/mgICreateDataStore.h \
    Src/OSGeo/FDO/Commands/DataStore/mgICreateDataStoreImp.cpp \
    Src/OSGeo/FDO/Commands/DataStore/mgICreateDataStoreImp.h \
    Src/OSGeo/FDO/Commands/DataStore/mgIDataStorePropertyDictionary.h \
    Src/OSGeo/FDO/Commands/DataStore/mgIDataStorePropertyDictionaryImp.cpp \
    Src/OSGeo/FDO/Commands/DataStore/mgIDataStorePropertyDictionaryImp.h \
    Src/OSGeo/FDO/Commands/DataStore/mgIDataStoreReader.h \
    Src/OSGeo/FDO/Commands/DataStore/mgIDataStoreReaderImp.cpp \
    Src/OSGeo/FDO/Commands/DataStore/mgIDataStoreReaderImp.h \
    Src/OSGeo/FDO/Commands/DataStore/mgIDestroyDataStore.h \
    Src/OSGeo/FDO/Commands/DataStore/mgIDestroyDataStoreImp.cpp \
    Src/OSGeo/FDO/Commands/DataStore/mgIDestroyDataStoreImp.h \
    Src/OSGeo/FDO/Commands/DataStore/mgIListDataStores.h \
    Src/OSGeo/FDO/Commands/DataStore/mgIListDataStoresImp.cpp \
    Src/OSGeo/FDO/Commands/DataStore/mgIListDataStoresImp.h \
    Src/OSGeo/FDO/Commands/Feature/mgIBaseSelect.h \
    Src/OSGeo/FDO/Commands/Feature/mgIBaseSelectImp.cpp \
    Src/OSGeo/FDO/Commands/Feature/mgIBaseSelectImp.h \
    Src/OSGeo/FDO/Commands/Feature/mgIDataReader.h \
    Src/OSGeo/FDO/Commands/Feature/mgIDataReaderImp.cpp \
    Src/OSGeo/FDO/Commands/Feature/mgIDataReaderImp.h \
    Src/OSGeo/FDO/Commands/Feature/mgIDelete.h \
    Src/OSGeo/FDO/Commands/Feature/mgIDeleteImp.cpp \
    Src/OSGeo/FDO/Commands/Feature/mgIDeleteImp.h \
    Src/OSGeo/FDO/Commands/Feature/mgIFeatureReader.h \
    Src/OSGeo/FDO/Commands/Feature/mgIFeatureReaderImp.cpp \
    Src/OSGeo/FDO/Commands/Feature/mgIFeatureReaderImp.h \
    Src/OSGeo/FDO/Commands/Feature/mgIInsert.h \
    Src/OSGeo/FDO/Commands/Feature/mgIInsertImp.cpp \
    Src/OSGeo/FDO/Commands/Feature/mgIInsertImp.h \
    Src/OSGeo/FDO/Commands/Feature/mgIReader.h \
    Src/OSGeo/FDO/Commands/Feature/mgIReaderImp.cpp \
    Src/OSGeo/FDO/Commands/Feature/mgIReaderImp.h \
    Src/OSGeo/FDO/Commands/Feature/mgISelect.h \
    Src/OSGeo/FDO/Commands/Feature/mgISelectAggregates.h \
    Src/OSGeo/FDO/Commands/Feature/mgISelectAggregatesImp.cpp \
    Src/OSGeo/FDO/Commands/Feature/mgISelectAggregatesImp.h \
    Src/OSGeo/FDO/Commands/Feature/mgISelectImp.cpp \
    Src/OSGeo/FDO/Commands/Feature/mgISelectImp.h \
    Src/OSGeo/FDO/Commands/Feature/mgIUpdate.h \
    Src/OSGeo/FDO/Commands/Feature/mgIUpdateImp.cpp \
    Src/OSGeo/FDO/Commands/Feature/mgIUpdateImp.h \
    Src/OSGeo/FDO/Commands/Locking/mgConflictType.h \
    Src/OSGeo/FDO/Commands/Locking/mgIAcquireLock.h \
    Src/OSGeo/FDO/Commands/Locking/mgIAcquireLockImp.cpp \
    Src/OSGeo/FDO/Commands/Locking/mgIAcquireLockImp.h \
    Src/OSGeo/FDO/Commands/Locking/mgIGetLockedObjects.h \
    Src/OSGeo/FDO/Commands/Locking/mgIGetLockedObjectsImp.cpp \
    Src/OSGeo/FDO/Commands/Locking/mgIGetLockedObjectsImp.h \
    Src/OSGeo/FDO/Commands/Locking/mgIGetLockInfo.h \
    Src/OSGeo/FDO/Commands/Locking/mgIGetLockInfoImp.cpp \
    Src/OSGeo/FDO/Commands/Locking/mgIGetLockInfoImp.h \
    Src/OSGeo/FDO/Commands/Locking/mgIGetLockOwners.h \
    Src/OSGeo/FDO/Commands/Locking/mgIGetLockOwnersImp.cpp \
    Src/OSGeo/FDO/Commands/Locking/mgIGetLockOwnersImp.h \
    Src/OSGeo/FDO/Commands/Locking/mgILockConflictReader.h \
    Src/OSGeo/FDO/Commands/Locking/mgILockConflictReaderImp.cpp \
    Src/OSGeo/FDO/Commands/Locking/mgILockConflictReaderImp.h \
    Src/OSGeo/FDO/Commands/Locking/mgILockedObjectReader.h \
    Src/OSGeo/FDO/Commands/Locking/mgILockedObjectReaderImp.cpp \
    Src/OSGeo/FDO/Commands/Locking/mgILockedObjectReaderImp.h \
    Src/OSGeo/FDO/Commands/Locking/mgILockOwnersReader.h \
    Src/OSGeo/FDO/Commands/Locking/mgILockOwnersReaderImp.cpp \
    Src/OSGeo/FDO/Commands/Locking/mgILockOwnersReaderImp.h \
    Src/OSGeo/FDO/Commands/Locking/mgIReleaseLock.h \
    Src/OSGeo/FDO/Commands/Locking/mgIReleaseLockImp.cpp \
    Src/OSGeo/FDO/Commands/Locking/mgIReleaseLockImp.h \
    Src/OSGeo/FDO/Commands/Locking/mgLockStrategy.h \
    Src/OSGeo/FDO/Commands/Locking/mgLockType.h \
    Src/OSGeo/FDO/Commands/LongTransaction/mgIActivateLongTransaction.h \
    Src/OSGeo/FDO/Commands/LongTransaction/mgIActivateLongTransactionCheckpoint.h \
    Src/OSGeo/FDO/Commands/LongTransaction/mgIActivateLongTransactionCheckpointImp.cpp \
    Src/OSGeo/FDO/Commands/LongTransaction/mgIActivateLongTransactionCheckpointImp.h \
    Src/OSGeo/FDO/Commands/LongTransaction/mgIActivateLongTransactionImp.cpp \
    Src/OSGeo/FDO/Commands/LongTransaction/mgIActivateLongTransactionImp.h \
    Src/OSGeo/FDO/Commands/LongTransaction/mgIChangeLongTransactionPrivileges.h \
    Src/OSGeo/FDO/Commands/LongTransaction/mgIChangeLongTransactionPrivilegesImp.cpp \
    Src/OSGeo/FDO/Commands/LongTransaction/mgIChangeLongTransactionPrivilegesImp.h \
    Src/OSGeo/FDO/Commands/LongTransaction/mgIChangeLongTransactionSet.h \
    Src/OSGeo/FDO/Commands/LongTransaction/mgIChangeLongTransactionSetImp.cpp \
    Src/OSGeo/FDO/Commands/LongTransaction/mgIChangeLongTransactionSetImp.h \
    Src/OSGeo/FDO/Commands/LongTransaction/mgICommitLongTransaction.h \
    Src/OSGeo/FDO/Commands/LongTransaction/mgICommitLongTransactionImp.cpp \
    Src/OSGeo/FDO/Commands/LongTransaction/mgICommitLongTransactionImp.h \
    Src/OSGeo/FDO/Commands/LongTransaction/mgICreateLongTransaction.h \
    Src/OSGeo/FDO/Commands/LongTransaction/mgICreateLongTransactionCheckpoint.h \
    Src/OSGeo/FDO/Commands/LongTransaction/mgICreateLongTransactionCheckpointImp.cpp \
    Src/OSGeo/FDO/Commands/LongTransaction/mgICreateLongTransactionCheckpointImp.h \
    Src/OSGeo/FDO/Commands/LongTransaction/mgICreateLongTransactionImp.cpp \
    Src/OSGeo/FDO/Commands/LongTransaction/mgICreateLongTransactionImp.h \
    Src/OSGeo/FDO/Commands/LongTransaction/mgIDeactivateLongTransaction.h \
    Src/OSGeo/FDO/Commands/LongTransaction/mgIDeactivateLongTransactionImp.cpp \
    Src/OSGeo/FDO/Commands/LongTransaction/mgIDeactivateLongTransactionImp.h \
    Src/OSGeo/FDO/Commands/LongTransaction/mgIFreezeLongTransaction.h \
    Src/OSGeo/FDO/Commands/LongTransaction/mgIFreezeLongTransactionImp.cpp \
    Src/OSGeo/FDO/Commands/LongTransaction/mgIFreezeLongTransactionImp.h \
    Src/OSGeo/FDO/Commands/LongTransaction/mgIGetLongTransactionCheckpoints.h \
    Src/OSGeo/FDO/Commands/LongTransaction/mgIGetLongTransactionCheckpointsImp.cpp \
    Src/OSGeo/FDO/Commands/LongTransaction/mgIGetLongTransactionCheckpointsImp.h \
    Src/OSGeo/FDO/Commands/LongTransaction/mgIGetLongTransactionPrivileges.h \
    Src/OSGeo/FDO/Commands/LongTransaction/mgIGetLongTransactionPrivilegesImp.cpp \
    Src/OSGeo/FDO/Commands/LongTransaction/mgIGetLongTransactionPrivilegesImp.h \
    Src/OSGeo/FDO/Commands/LongTransaction/mgIGetLongTransactions.h \
    Src/OSGeo/FDO/Commands/LongTransaction/mgIGetLongTransactionsImp.cpp \
    Src/OSGeo/FDO/Commands/LongTransaction/mgIGetLongTransactionsImp.h \
    Src/OSGeo/FDO/Commands/LongTransaction/mgIGetLongTransactionsInSet.h \
    Src/OSGeo/FDO/Commands/LongTransaction/mgIGetLongTransactionsInSetImp.cpp \
    Src/OSGeo/FDO/Commands/LongTransaction/mgIGetLongTransactionsInSetImp.h \
    Src/OSGeo/FDO/Commands/LongTransaction/mgILongTransactionCheckpointReader.h \
    Src/OSGeo/FDO/Commands/LongTransaction/mgILongTransactionCheckpointReaderImp.cpp \
    Src/OSGeo/FDO/Commands/LongTransaction/mgILongTransactionCheckpointReaderImp.h \
    Src/OSGeo/FDO/Commands/LongTransaction/mgILongTransactionConflictDirectiveEnumerator.h \
    Src/OSGeo/FDO/Commands/LongTransaction/mgILongTransactionConflictDirectiveEnumeratorImp.cpp \
    Src/OSGeo/FDO/Commands/LongTransaction/mgILongTransactionConflictDirectiveEnumeratorImp.h \
    Src/OSGeo/FDO/Commands/LongTransaction/mgILongTransactionPrivilegeReader.h \
    Src/OSGeo/FDO/Commands/LongTransaction/mgILongTransactionPrivilegeReaderImp.cpp \
    Src/OSGeo/FDO/Commands/LongTransaction/mgILongTransactionPrivilegeReaderImp.h \
    Src/OSGeo/FDO/Commands/LongTransaction/mgILongTransactionReader.h \
    Src/OSGeo/FDO/Commands/LongTransaction/mgILongTransactionReaderImp.cpp \
    Src/OSGeo/FDO/Commands/LongTransaction/mgILongTransactionReaderImp.h \
    Src/OSGeo/FDO/Commands/LongTransaction/mgILongTransactionSetReader.h \
    Src/OSGeo/FDO/Commands/LongTransaction/mgILongTransactionSetReaderImp.cpp \
    Src/OSGeo/FDO/Commands/LongTransaction/mgILongTransactionSetReaderImp.h \
    Src/OSGeo/FDO/Commands/LongTransaction/mgIRollbackLongTransaction.h \
    Src/OSGeo/FDO/Commands/LongTransaction/mgIRollbackLongTransactionCheckpoint.h \
    Src/OSGeo/FDO/Commands/LongTransaction/mgIRollbackLongTransactionCheckpointImp.cpp \
    Src/OSGeo/FDO/Commands/LongTransaction/mgIRollbackLongTransactionCheckpointImp.h \
    Src/OSGeo/FDO/Commands/LongTransaction/mgIRollbackLongTransactionImp.cpp \
    Src/OSGeo/FDO/Commands/LongTransaction/mgIRollbackLongTransactionImp.h \
    Src/OSGeo/FDO/Commands/LongTransaction/mgLongTransactionConflictResolution.h \
    Src/OSGeo/FDO/Commands/LongTransaction/mgLongTransactionFreezeOperations.h \
    Src/OSGeo/FDO/Commands/LongTransaction/mgLongTransactionPrivilegeOperations.h \
    Src/OSGeo/FDO/Commands/LongTransaction/mgLongTransactionPrivileges.h \
    Src/OSGeo/FDO/Commands/LongTransaction/mgLongTransactionSetOperations.h \
    Src/OSGeo/FDO/Commands/mgBatchParameterValueCollection.cpp \
    Src/OSGeo/FDO/Commands/mgBatchParameterValueCollection.h \
    Src/OSGeo/FDO/Commands/mgCommandType.h \
    Src/OSGeo/FDO/Commands/mgICommand.h \
    Src/OSGeo/FDO/Commands/mgICommandImp.cpp \
    Src/OSGeo/FDO/Commands/mgICommandImp.h \
    Src/OSGeo/FDO/Commands/mgIdentifierCollection.cpp \
    Src/OSGeo/FDO/Commands/mgIdentifierCollection.h \
    Src/OSGeo/FDO/Commands/mgIFeatureCommand.h \
    Src/OSGeo/FDO/Commands/mgIFeatureCommandImp.cpp \
    Src/OSGeo/FDO/Commands/mgIFeatureCommandImp.h \
    Src/OSGeo/FDO/Commands/mgOrderingOption.h \
    Src/OSGeo/FDO/Commands/mgParameterValue.cpp \
    Src/OSGeo/FDO/Commands/mgParameterValue.h \
    Src/OSGeo/FDO/Commands/mgParameterValueCollection.cpp \
    Src/OSGeo/FDO/Commands/mgParameterValueCollection.h \
    Src/OSGeo/FDO/Commands/mgPropertyValue.cpp \
    Src/OSGeo/FDO/Commands/mgPropertyValue.h \
    Src/OSGeo/FDO/Commands/mgPropertyValueCollection.cpp \
    Src/OSGeo/FDO/Commands/mgPropertyValueCollection.h \
    Src/OSGeo/FDO/Commands/Schema/mgIApplySchema.h \
    Src/OSGeo/FDO/Commands/Schema/mgIApplySchemaImp.cpp \
    Src/OSGeo/FDO/Commands/Schema/mgIApplySchemaImp.h \
    Src/OSGeo/FDO/Commands/Schema/mgIDescribeSchema.h \
    Src/OSGeo/FDO/Commands/Schema/mgIDescribeSchemaImp.cpp \
    Src/OSGeo/FDO/Commands/Schema/mgIDescribeSchemaImp.h \
    Src/OSGeo/FDO/Commands/Schema/mgIDescribeSchemaMapping.h \
    Src/OSGeo/FDO/Commands/Schema/mgIDescribeSchemaMappingImp.cpp \
    Src/OSGeo/FDO/Commands/Schema/mgIDescribeSchemaMappingImp.h \
    Src/OSGeo/FDO/Commands/Schema/mgIDestroySchema.h \
    Src/OSGeo/FDO/Commands/Schema/mgIDestroySchemaImp.cpp \
    Src/OSGeo/FDO/Commands/Schema/mgIDestroySchemaImp.h \
    Src/OSGeo/FDO/Commands/Schema/mgIPhysicalElementMapping.h \
    Src/OSGeo/FDO/Commands/Schema/mgIPhysicalPropertyMapping.h \
    Src/OSGeo/FDO/Commands/Schema/mgPhysicalClassMapping.cpp \
    Src/OSGeo/FDO/Commands/Schema/mgPhysicalClassMapping.h \
    Src/OSGeo/FDO/Commands/Schema/mgPhysicalElementMapping.cpp \
    Src/OSGeo/FDO/Commands/Schema/mgPhysicalElementMapping.h \
    Src/OSGeo/FDO/Commands/Schema/mgPhysicalPropertyMapping.cpp \
    Src/OSGeo/FDO/Commands/Schema/mgPhysicalPropertyMapping.h \
    Src/OSGeo/FDO/Commands/Schema/mgPhysicalSchemaMapping.cpp \
    Src/OSGeo/FDO/Commands/Schema/mgPhysicalSchemaMapping.h \
    Src/OSGeo/FDO/Commands/Schema/mgPhysicalSchemaMappingCollection.cpp \
    Src/OSGeo/FDO/Commands/Schema/mgPhysicalSchemaMappingCollection.h \
    Src/OSGeo/FDO/Commands/SpatialContext/mgIActivateSpatialContext.h \
    Src/OSGeo/FDO/Commands/SpatialContext/mgIActivateSpatialContextImp.cpp \
    Src/OSGeo/FDO/Commands/SpatialContext/mgIActivateSpatialContextImp.h \
    Src/OSGeo/FDO/Commands/SpatialContext/mgICreateSpatialContext.h \
    Src/OSGeo/FDO/Commands/SpatialContext/mgICreateSpatialContextImp.cpp \
    Src/OSGeo/FDO/Commands/SpatialContext/mgICreateSpatialContextImp.h \
    Src/OSGeo/FDO/Commands/SpatialContext/mgIDestroySpatialContext.h \
    Src/OSGeo/FDO/Commands/SpatialContext/mgIDestroySpatialContextImp.cpp \
    Src/OSGeo/FDO/Commands/SpatialContext/mgIDestroySpatialContextImp.h \
    Src/OSGeo/FDO/Commands/SpatialContext/mgIGetSpatialContexts.h \
    Src/OSGeo/FDO/Commands/SpatialContext/mgIGetSpatialContextsImp.cpp \
    Src/OSGeo/FDO/Commands/SpatialContext/mgIGetSpatialContextsImp.h \
    Src/OSGeo/FDO/Commands/SpatialContext/mgISpatialContextReader.h \
    Src/OSGeo/FDO/Commands/SpatialContext/mgISpatialContextReaderImp.cpp \
    Src/OSGeo/FDO/Commands/SpatialContext/mgISpatialContextReaderImp.h \
    Src/OSGeo/FDO/Commands/SpatialContext/mgSpatialContextExtentType.h \
    Src/OSGeo/FDO/Commands/SQL/mgISQLCommand.h \
    Src/OSGeo/FDO/Commands/SQL/mgISQLCommandImp.cpp \
    Src/OSGeo/FDO/Commands/SQL/mgISQLCommandImp.h \
    Src/OSGeo/FDO/Commands/SQL/mgISQLDataReader.h \
    Src/OSGeo/FDO/Commands/SQL/mgISQLDataReaderImp.cpp \
    Src/OSGeo/FDO/Commands/SQL/mgISQLDataReaderImp.h \
    Src/OSGeo/FDO/Commands/UnitOfMeasure/mgBaseUnit.h \
    Src/OSGeo/FDO/Commands/UnitOfMeasure/mgICreateMeasureUnit.h \
    Src/OSGeo/FDO/Commands/UnitOfMeasure/mgICreateMeasureUnitImp.cpp \
    Src/OSGeo/FDO/Commands/UnitOfMeasure/mgICreateMeasureUnitImp.h \
    Src/OSGeo/FDO/Commands/UnitOfMeasure/mgIDestroyMeasureUnit.h \
    Src/OSGeo/FDO/Commands/UnitOfMeasure/mgIDestroyMeasureUnitImp.cpp \
    Src/OSGeo/FDO/Commands/UnitOfMeasure/mgIDestroyMeasureUnitImp.h \
    Src/OSGeo/FDO/Commands/UnitOfMeasure/mgIGetMeasureUnits.h \
    Src/OSGeo/FDO/Commands/UnitOfMeasure/mgIGetMeasureUnitsImp.cpp \
    Src/OSGeo/FDO/Commands/UnitOfMeasure/mgIGetMeasureUnitsImp.h \
    Src/OSGeo/FDO/Commands/UnitOfMeasure/mgIMeasureUnitReader.h \
    Src/OSGeo/FDO/Commands/UnitOfMeasure/mgIMeasureUnitReaderImp.cpp \
    Src/OSGeo/FDO/Commands/UnitOfMeasure/mgIMeasureUnitReaderImp.h \
    Src/OSGeo/FDO/Connections/Capabilities/mgArgumentDefinition.cpp \
    Src/OSGeo/FDO/Connections/Capabilities/mgArgumentDefinition.h \
    Src/OSGeo/FDO/Connections/Capabilities/mgArgumentDefinitionCollection.cpp \
    Src/OSGeo/FDO/Connections/Capabilities/mgArgumentDefinitionCollection.h \
    Src/OSGeo/FDO/Connections/Capabilities/mgFunctionDefinition.cpp \
    Src/OSGeo/FDO/Connections/Capabilities/mgFunctionDefinition.h \
    Src/OSGeo/FDO/Connections/Capabilities/mgFunctionDefinitionCollection.cpp \
    Src/OSGeo/FDO/Connections/Capabilities/mgFunctionDefinitionCollection.h \
    Src/OSGeo/FDO/Connections/Capabilities/mgICommandCapabilities.h \
    Src/OSGeo/FDO/Connections/Capabilities/mgICommandCapabilitiesImp.cpp \
    Src/OSGeo/FDO/Connections/Capabilities/mgICommandCapabilitiesImp.h \
    Src/OSGeo/FDO/Connections/Capabilities/mgIConnectionCapabilities.h \
    Src/OSGeo/FDO/Connections/Capabilities/mgIConnectionCapabilitiesImp.cpp \
    Src/OSGeo/FDO/Connections/Capabilities/mgIConnectionCapabilitiesImp.h \
    Src/OSGeo/FDO/Connections/Capabilities/mgIExpressionCapabilities.h \
    Src/OSGeo/FDO/Connections/Capabilities/mgIExpressionCapabilitiesImp.cpp \
    Src/OSGeo/FDO/Connections/Capabilities/mgIExpressionCapabilitiesImp.h \
    Src/OSGeo/FDO/Connections/Capabilities/mgIFilterCapabilities.h \
    Src/OSGeo/FDO/Connections/Capabilities/mgIFilterCapabilitiesImp.cpp \
    Src/OSGeo/FDO/Connections/Capabilities/mgIFilterCapabilitiesImp.h \
    Src/OSGeo/FDO/Connections/Capabilities/mgIGeometryCapabilities.h \
    Src/OSGeo/FDO/Connections/Capabilities/mgIGeometryCapabilitiesImp.cpp \
    Src/OSGeo/FDO/Connections/Capabilities/mgIGeometryCapabilitiesImp.h \
    Src/OSGeo/FDO/Connections/Capabilities/mgIRasterCapabilities.h \
    Src/OSGeo/FDO/Connections/Capabilities/mgIRasterCapabilitiesImp.cpp \
    Src/OSGeo/FDO/Connections/Capabilities/mgIRasterCapabilitiesImp.h \
    Src/OSGeo/FDO/Connections/Capabilities/mgISchemaCapabilities.h \
    Src/OSGeo/FDO/Connections/Capabilities/mgISchemaCapabilitiesImp.cpp \
    Src/OSGeo/FDO/Connections/Capabilities/mgISchemaCapabilitiesImp.h \
    Src/OSGeo/FDO/Connections/Capabilities/mgITopologyCapabilities.h \
    Src/OSGeo/FDO/Connections/Capabilities/mgITopologyCapabilitiesImp.cpp \
    Src/OSGeo/FDO/Connections/Capabilities/mgITopologyCapabilitiesImp.h \
    Src/OSGeo/FDO/Connections/Capabilities/mgReadOnlyArgumentDefinitionCollection.cpp \
    Src/OSGeo/FDO/Connections/Capabilities/mgReadOnlyArgumentDefinitionCollection.h \
    Src/OSGeo/FDO/Connections/Capabilities/mgThreadCapability.h \
    Src/OSGeo/FDO/Connections/mgConnectionState.h \
    Src/OSGeo/FDO/Connections/mgIConnection.h \
    Src/OSGeo/FDO/Connections/mgIConnectionImp.cpp \
    Src/OSGeo/FDO/Connections/mgIConnectionImp.h \
    Src/OSGeo/FDO/Connections/mgIConnectionInfo.h \
    Src/OSGeo/FDO/Connections/mgIConnectionInfoImp.cpp \
    Src/OSGeo/FDO/Connections/mgIConnectionInfoImp.h \
    Src/OSGeo/FDO/Connections/mgIConnectionPropertyDictionary.h \
    Src/OSGeo/FDO/Connections/mgIConnectionPropertyDictionaryImp.cpp \
    Src/OSGeo/FDO/Connections/mgIConnectionPropertyDictionaryImp.h \
    Src/OSGeo/FDO/Connections/mgITransaction.h \
    Src/OSGeo/FDO/Connections/mgITransactionImp.cpp \
    Src/OSGeo/FDO/Connections/mgITransactionImp.h \
    Src/OSGeo/FDO/Expression/mgBinaryExpression.cpp \
    Src/OSGeo/FDO/Expression/mgBinaryExpression.h \
    Src/OSGeo/FDO/Expression/mgBinaryOperations.h \
    Src/OSGeo/FDO/Expression/mgBLOBValue.cpp \
    Src/OSGeo/FDO/Expression/mgBLOBValue.h \
    Src/OSGeo/FDO/Expression/mgBooleanValue.cpp \
    Src/OSGeo/FDO/Expression/mgBooleanValue.h \
    Src/OSGeo/FDO/Expression/mgByteValue.cpp \
    Src/OSGeo/FDO/Expression/mgByteValue.h \
    Src/OSGeo/FDO/Expression/mgCLOBValue.cpp \
    Src/OSGeo/FDO/Expression/mgCLOBValue.h \
    Src/OSGeo/FDO/Expression/mgComputedIdentifier.cpp \
    Src/OSGeo/FDO/Expression/mgComputedIdentifier.h \
    Src/OSGeo/FDO/Expression/mgDataValue.cpp \
    Src/OSGeo/FDO/Expression/mgDataValue.h \
    Src/OSGeo/FDO/Expression/mgDataValueCollection.cpp \
    Src/OSGeo/FDO/Expression/mgDataValueCollection.h \
    Src/OSGeo/FDO/Expression/mgDateTimeValue.cpp \
    Src/OSGeo/FDO/Expression/mgDateTimeValue.h \
    Src/OSGeo/FDO/Expression/mgDecimalValue.cpp \
    Src/OSGeo/FDO/Expression/mgDecimalValue.h \
    Src/OSGeo/FDO/Expression/mgDoubleValue.cpp \
    Src/OSGeo/FDO/Expression/mgDoubleValue.h \
    Src/OSGeo/FDO/Expression/mgExpression.cpp \
    Src/OSGeo/FDO/Expression/mgExpression.h \
    Src/OSGeo/FDO/Expression/mgExpressionCollection.cpp \
    Src/OSGeo/FDO/Expression/mgExpressionCollection.h \
    Src/OSGeo/FDO/Expression/mgExpressionType.h \
    Src/OSGeo/FDO/Expression/mgFunction.cpp \
    Src/OSGeo/FDO/Expression/mgFunction.h \
    Src/OSGeo/FDO/Expression/mgGeometryValue.cpp \
    Src/OSGeo/FDO/Expression/mgGeometryValue.h \
    Src/OSGeo/FDO/Expression/mgIdentifier.cpp \
    Src/OSGeo/FDO/Expression/mgIdentifier.h \
    Src/OSGeo/FDO/Expression/mgIExpressionProcessor.h \
    Src/OSGeo/FDO/Expression/mgIExpressionProcessorImp.cpp \
    Src/OSGeo/FDO/Expression/mgIExpressionProcessorImp.h \
    Src/OSGeo/FDO/Expression/mgInt16Value.cpp \
    Src/OSGeo/FDO/Expression/mgInt16Value.h \
    Src/OSGeo/FDO/Expression/mgInt32Value.cpp \
    Src/OSGeo/FDO/Expression/mgInt32Value.h \
    Src/OSGeo/FDO/Expression/mgInt64Value.cpp \
    Src/OSGeo/FDO/Expression/mgInt64Value.h \
    Src/OSGeo/FDO/Expression/mgLiteralValue.cpp \
    Src/OSGeo/FDO/Expression/mgLiteralValue.h \
    Src/OSGeo/FDO/Expression/mgLOBValue.cpp \
    Src/OSGeo/FDO/Expression/mgLOBValue.h \
    Src/OSGeo/FDO/Expression/mgParameter.cpp \
    Src/OSGeo/FDO/Expression/mgParameter.h \
    Src/OSGeo/FDO/Expression/mgSingleValue.cpp \
    Src/OSGeo/FDO/Expression/mgSingleValue.h \
    Src/OSGeo/FDO/Expression/mgStringValue.cpp \
    Src/OSGeo/FDO/Expression/mgStringValue.h \
    Src/OSGeo/FDO/Expression/mgUnaryExpression.cpp \
    Src/OSGeo/FDO/Expression/mgUnaryExpression.h \
    Src/OSGeo/FDO/Expression/mgUnaryOperations.h \
    Src/OSGeo/FDO/Expression/mgValueExpression.cpp \
    Src/OSGeo/FDO/Expression/mgValueExpression.h \
    Src/OSGeo/FDO/Filter/mgBinaryLogicalOperations.h \
    Src/OSGeo/FDO/Filter/mgBinaryLogicalOperator.cpp \
    Src/OSGeo/FDO/Filter/mgBinaryLogicalOperator.h \
    Src/OSGeo/FDO/Filter/mgComparisonCondition.cpp \
    Src/OSGeo/FDO/Filter/mgComparisonCondition.h \
    Src/OSGeo/FDO/Filter/mgComparisonOperations.h \
    Src/OSGeo/FDO/Filter/mgConditionType.h \
    Src/OSGeo/FDO/Filter/mgDistanceCondition.cpp \
    Src/OSGeo/FDO/Filter/mgDistanceCondition.h \
    Src/OSGeo/FDO/Filter/mgDistanceOperations.h \
    Src/OSGeo/FDO/Filter/mgFilter.cpp \
    Src/OSGeo/FDO/Filter/mgFilter.h \
    Src/OSGeo/FDO/Filter/mgGeometricCondition.cpp \
    Src/OSGeo/FDO/Filter/mgGeometricCondition.h \
    Src/OSGeo/FDO/Filter/mgIFilterProcessor.h \
    Src/OSGeo/FDO/Filter/mgIFilterProcessorImp.cpp \
    Src/OSGeo/FDO/Filter/mgIFilterProcessorImp.h \
    Src/OSGeo/FDO/Filter/mgInCondition.cpp \
    Src/OSGeo/FDO/Filter/mgInCondition.h \
    Src/OSGeo/FDO/Filter/mgLogicalOperator.cpp \
    Src/OSGeo/FDO/Filter/mgLogicalOperator.h \
    Src/OSGeo/FDO/Filter/mgNullCondition.cpp \
    Src/OSGeo/FDO/Filter/mgNullCondition.h \
    Src/OSGeo/FDO/Filter/mgSearchCondition.cpp \
    Src/OSGeo/FDO/Filter/mgSearchCondition.h \
    Src/OSGeo/FDO/Filter/mgSpatialCondition.cpp \
    Src/OSGeo/FDO/Filter/mgSpatialCondition.h \
    Src/OSGeo/FDO/Filter/mgSpatialOperations.h \
    Src/OSGeo/FDO/Filter/mgUnaryLogicalOperations.h \
    Src/OSGeo/FDO/Filter/mgUnaryLogicalOperator.cpp \
    Src/OSGeo/FDO/Filter/mgUnaryLogicalOperator.h \
    Src/OSGeo/FDO/Filter/mgValueExpressionCollection.cpp \
    Src/OSGeo/FDO/Filter/mgValueExpressionCollection.h \
    Src/OSGeo/FDO/Raster/mgDataValueCollection.cpp \
    Src/OSGeo/FDO/Raster/mgDataValueCollection.h \
    Src/OSGeo/FDO/Raster/mgIRaster.h \
    Src/OSGeo/FDO/Raster/mgIRasterImp.cpp \
    Src/OSGeo/FDO/Raster/mgIRasterImp.h \
    Src/OSGeo/FDO/Raster/mgIRasterPropertyDictionary.h \
    Src/OSGeo/FDO/Raster/mgIRasterPropertyDictionaryImp.cpp \
    Src/OSGeo/FDO/Raster/mgIRasterPropertyDictionaryImp.h \
    Src/OSGeo/FDO/Raster/mgRasterDataModel.cpp \
    Src/OSGeo/FDO/Raster/mgRasterDataModel.h \
    Src/OSGeo/FDO/Raster/mgRasterDataModelType.h \
    Src/OSGeo/FDO/Raster/mgRasterDataOrganization.h \
    Src/OSGeo/FDO/Raster/mgRasterDataType.h \
    Src/OSGeo/FDO/Schema/mgAssociationPropertyDefinition.cpp \
    Src/OSGeo/FDO/Schema/mgAssociationPropertyDefinition.h \
    Src/OSGeo/FDO/Schema/mgClass.cpp \
    Src/OSGeo/FDO/Schema/mgClass.h \
    Src/OSGeo/FDO/Schema/mgClassCapabilities.cpp \
    Src/OSGeo/FDO/Schema/mgClassCapabilities.h \
    Src/OSGeo/FDO/Schema/mgClassCollection.cpp \
    Src/OSGeo/FDO/Schema/mgClassCollection.h \
    Src/OSGeo/FDO/Schema/mgClassDefinition.cpp \
    Src/OSGeo/FDO/Schema/mgClassDefinition.h \
    Src/OSGeo/FDO/Schema/mgClassType.h \
    Src/OSGeo/FDO/Schema/mgDataPropertyDefinition.cpp \
    Src/OSGeo/FDO/Schema/mgDataPropertyDefinition.h \
    Src/OSGeo/FDO/Schema/mgDataPropertyDefinitionCollection.cpp \
    Src/OSGeo/FDO/Schema/mgDataPropertyDefinitionCollection.h \
    Src/OSGeo/FDO/Schema/mgDataType.h \
    Src/OSGeo/FDO/Schema/mgDeleteRule.h \
    Src/OSGeo/FDO/Schema/mgFeatureClass.cpp \
    Src/OSGeo/FDO/Schema/mgFeatureClass.h \
    Src/OSGeo/FDO/Schema/mgFeatureClassCollection.cpp \
    Src/OSGeo/FDO/Schema/mgFeatureClassCollection.h \
    Src/OSGeo/FDO/Schema/mgFeatureSchema.cpp \
    Src/OSGeo/FDO/Schema/mgFeatureSchema.h \
    Src/OSGeo/FDO/Schema/mgFeatureSchemaCollection.cpp \
    Src/OSGeo/FDO/Schema/mgFeatureSchemaCollection.h \
    Src/OSGeo/FDO/Schema/mgGeometricPropertyDefinition.cpp \
    Src/OSGeo/FDO/Schema/mgGeometricPropertyDefinition.h \
    Src/OSGeo/FDO/Schema/mgGeometricType.h \
    Src/OSGeo/FDO/Schema/mgNetworkClass.cpp \
    Src/OSGeo/FDO/Schema/mgNetworkClass.h \
    Src/OSGeo/FDO/Schema/mgNetworkFeatureClass.cpp \
    Src/OSGeo/FDO/Schema/mgNetworkFeatureClass.h \
    Src/OSGeo/FDO/Schema/mgNetworkLayerClass.cpp \
    Src/OSGeo/FDO/Schema/mgNetworkLayerClass.h \
    Src/OSGeo/FDO/Schema/mgNetworkLinkFeatureClass.cpp \
    Src/OSGeo/FDO/Schema/mgNetworkLinkFeatureClass.h \
    Src/OSGeo/FDO/Schema/mgNetworkNodeFeatureClass.cpp \
    Src/OSGeo/FDO/Schema/mgNetworkNodeFeatureClass.h \
    Src/OSGeo/FDO/Schema/mgObjectPropertyDefinition.cpp \
    Src/OSGeo/FDO/Schema/mgObjectPropertyDefinition.h \
    Src/OSGeo/FDO/Schema/mgObjectType.h \
    Src/OSGeo/FDO/Schema/mgOrderType.h \
    Src/OSGeo/FDO/Schema/mgPropertyDefinition.cpp \
    Src/OSGeo/FDO/Schema/mgPropertyDefinition.h \
    Src/OSGeo/FDO/Schema/mgPropertyDefinitionCollection.cpp \
    Src/OSGeo/FDO/Schema/mgPropertyDefinitionCollection.h \
    Src/OSGeo/FDO/Schema/mgPropertyType.h \
    Src/OSGeo/FDO/Schema/mgPropertyValueConstraint.cpp \
    Src/OSGeo/FDO/Schema/mgPropertyValueConstraint.h \
    Src/OSGeo/FDO/Schema/mgPropertyValueConstraintList.cpp \
    Src/OSGeo/FDO/Schema/mgPropertyValueConstraintList.h \
    Src/OSGeo/FDO/Schema/mgPropertyValueConstraintRange.cpp \
    Src/OSGeo/FDO/Schema/mgPropertyValueConstraintRange.h \
    Src/OSGeo/FDO/Schema/mgPropertyValueConstraintType.h \
    Src/OSGeo/FDO/Schema/mgRasterPropertyDefinition.cpp \
    Src/OSGeo/FDO/Schema/mgRasterPropertyDefinition.h \
    Src/OSGeo/FDO/Schema/mgReadOnlyDataPropertyDefinitionCollection.cpp \
    Src/OSGeo/FDO/Schema/mgReadOnlyDataPropertyDefinitionCollection.h \
    Src/OSGeo/FDO/Schema/mgReadOnlyPropertyDefinitionCollection.cpp \
    Src/OSGeo/FDO/Schema/mgReadOnlyPropertyDefinitionCollection.h \
    Src/OSGeo/FDO/Schema/mgSchemaAttributeDictionary.cpp \
    Src/OSGeo/FDO/Schema/mgSchemaAttributeDictionary.h \
    Src/OSGeo/FDO/Schema/mgSchemaElement.cpp \
    Src/OSGeo/FDO/Schema/mgSchemaElement.h \
    Src/OSGeo/FDO/Schema/mgSchemaElementState.h \
    Src/OSGeo/FDO/Schema/mgTopoFeaturePropertyDefinition.cpp \
    Src/OSGeo/FDO/Schema/mgTopoFeaturePropertyDefinition.h \
    Src/OSGeo/FDO/Schema/mgTopoGeometryPropertyDefinition.cpp \
    Src/OSGeo/FDO/Schema/mgTopoGeometryPropertyDefinition.h \
    Src/OSGeo/FDO/Schema/mgTopology.cpp \
    Src/OSGeo/FDO/Schema/mgTopology.h \
    Src/OSGeo/FDO/Schema/mgUniqueConstraint.cpp \
    Src/OSGeo/FDO/Schema/mgUniqueConstraint.h \
    Src/OSGeo/FDO/Schema/mgUniqueConstraintCollection.cpp \
    Src/OSGeo/FDO/Schema/mgUniqueConstraintCollection.h \
    Src/OSGeo/FDO/Xml/mgIXmlDeserializable.h \
    Src/OSGeo/FDO/Xml/mgIXmlSerializable.h \
    Src/OSGeo/FDO/Xml/mgXmlClassMapping.cpp \
    Src/OSGeo/FDO/Xml/mgXmlClassMapping.h \
    Src/OSGeo/FDO/Xml/mgXmlClassMappingCollection.cpp \
    Src/OSGeo/FDO/Xml/mgXmlClassMappingCollection.h \
    Src/OSGeo/FDO/Xml/mgXmlContext.cpp \
    Src/OSGeo/FDO/Xml/mgXmlContext.h \
    Src/OSGeo/FDO/Xml/mgXmlDeserializable.cpp \
    Src/OSGeo/FDO/Xml/mgXmlDeserializable.h \
    Src/OSGeo/FDO/Xml/mgXmlElementMapping.cpp \
    Src/OSGeo/FDO/Xml/mgXmlElementMapping.h \
    Src/OSGeo/FDO/Xml/mgXmlElementMappingCollection.cpp \
    Src/OSGeo/FDO/Xml/mgXmlElementMappingCollection.h \
    Src/OSGeo/FDO/Xml/mgXmlFeatureContext.cpp \
    Src/OSGeo/FDO/Xml/mgXmlFeatureContext.h \
    Src/OSGeo/FDO/Xml/mgXmlFeatureFlags.cpp \
    Src/OSGeo/FDO/Xml/mgXmlFeatureFlags.h \
    Src/OSGeo/FDO/Xml/mgXmlFeatureHandler.cpp \
    Src/OSGeo/FDO/Xml/mgXmlFeatureHandler.h \
    Src/OSGeo/FDO/Xml/mgXmlFeaturePropertyReader.cpp \
    Src/OSGeo/FDO/Xml/mgXmlFeaturePropertyReader.h \
    Src/OSGeo/FDO/Xml/mgXmlFeaturePropertyWriter.cpp \
    Src/OSGeo/FDO/Xml/mgXmlFeaturePropertyWriter.h \
    Src/OSGeo/FDO/Xml/mgXmlFeatureReader.cpp \
    Src/OSGeo/FDO/Xml/mgXmlFeatureReader.h \
    Src/OSGeo/FDO/Xml/mgXmlFeatureSerializer.cpp \
    Src/OSGeo/FDO/Xml/mgXmlFeatureSerializer.h \
    Src/OSGeo/FDO/Xml/mgXmlFeatureWriter.cpp \
    Src/OSGeo/FDO/Xml/mgXmlFeatureWriter.h \
    Src/OSGeo/FDO/Xml/mgXmlFlags.cpp \
    Src/OSGeo/FDO/Xml/mgXmlFlags.h \
    Src/OSGeo/FDO/Xml/mgXmlNameCollectionHandler.cpp \
    Src/OSGeo/FDO/Xml/mgXmlNameCollectionHandler.h \
    Src/OSGeo/FDO/Xml/mgXmlSchemaMapping.cpp \
    Src/OSGeo/FDO/Xml/mgXmlSchemaMapping.h \
    Src/OSGeo/FDO/Xml/mgXmlSerializable.cpp \
    Src/OSGeo/FDO/Xml/mgXmlSerializable.h \
    Src/OSGeo/FDO/Xml/mgXmlSpatialContextFlags.cpp \
    Src/OSGeo/FDO/Xml/mgXmlSpatialContextFlags.h \
    Src/OSGeo/FDO/Xml/mgXmlSpatialContextReader.cpp \
    Src/OSGeo/FDO/Xml/mgXmlSpatialContextReader.h \
    Src/OSGeo/FDO/Xml/mgXmlSpatialContextSerializer.cpp \
    Src/OSGeo/FDO/Xml/mgXmlSpatialContextSerializer.h \
    Src/OSGeo/FDO/Xml/mgXmlSpatialContextWriter.cpp \
    Src/OSGeo/FDO/Xml/mgXmlSpatialContextWriter.h \
    Src/OSGeo/Geometry/AssemblyVersion.cpp \
    Src/OSGeo/Geometry/AssemblyInfo.cpp \
    Src/OSGeo/Geometry/mgFgfGeometryFactory.cpp \
    Src/OSGeo/Geometry/mgFgfGeometryFactory.h \
    Src/OSGeo/Geometry/mgDirectPositionImpl.cpp \
    Src/OSGeo/Geometry/mgDirectPositionImpl.h \
    Src/OSGeo/Geometry/mgEnvelopeImpl.cpp \
    Src/OSGeo/Geometry/mgEnvelopeImpl.h \
    Src/OSGeo/Geometry/MgGeometry.rc \
    Src/OSGeo/Geometry/mgGeometryFactoryAbstract.cpp \
    Src/OSGeo/Geometry/mgGeometryFactoryAbstract.h \
    Src/OSGeo/Geometry/mgIArcSegmentAbstract.h \
    Src/OSGeo/Geometry/mgIArcSegmentAbstractImp.cpp \
    Src/OSGeo/Geometry/mgIArcSegmentAbstractImp.h \
    Src/OSGeo/Geometry/mgICircularArcSegment.h \
    Src/OSGeo/Geometry/mgICircularArcSegmentImp.cpp \
    Src/OSGeo/Geometry/mgICircularArcSegmentImp.h \
    Src/OSGeo/Geometry/mgICurveAbstract.h \
    Src/OSGeo/Geometry/mgICurveAbstractImp.cpp \
    Src/OSGeo/Geometry/mgICurveAbstractImp.h \
    Src/OSGeo/Geometry/mgICurvePolygon.h \
    Src/OSGeo/Geometry/mgICurvePolygonImp.cpp \
    Src/OSGeo/Geometry/mgICurvePolygonImp.h \
    Src/OSGeo/Geometry/mgICurveSegmentAbstract.h \
    Src/OSGeo/Geometry/mgICurveSegmentAbstractImp.cpp \
    Src/OSGeo/Geometry/mgICurveSegmentAbstractImp.h \
    Src/OSGeo/Geometry/mgICurveString.h \
    Src/OSGeo/Geometry/mgICurveStringImp.cpp \
    Src/OSGeo/Geometry/mgICurveStringImp.h \
    Src/OSGeo/Geometry/mgIDirectPosition.h \
    Src/OSGeo/Geometry/mgIDirectPositionImp.cpp \
    Src/OSGeo/Geometry/mgIDirectPositionImp.h \
    Src/OSGeo/Geometry/mgIEnvelope.h \
    Src/OSGeo/Geometry/mgIEnvelopeImp.cpp \
    Src/OSGeo/Geometry/mgIEnvelopeImp.h \
    Src/OSGeo/Geometry/mgIGeometricAggregateAbstract.h \
    Src/OSGeo/Geometry/mgIGeometricAggregateAbstractImp.cpp \
    Src/OSGeo/Geometry/mgIGeometricAggregateAbstractImp.h \
    Src/OSGeo/Geometry/mgIGeometry.h \
    Src/OSGeo/Geometry/mgIGeometryImp.cpp \
    Src/OSGeo/Geometry/mgIGeometryImp.h \
    Src/OSGeo/Geometry/mgILinearRing.h \
    Src/OSGeo/Geometry/mgILinearRingImp.cpp \
    Src/OSGeo/Geometry/mgILinearRingImp.h \
    Src/OSGeo/Geometry/mgILineString.h \
    Src/OSGeo/Geometry/mgILineStringImp.cpp \
    Src/OSGeo/Geometry/mgILineStringImp.h \
    Src/OSGeo/Geometry/mgILineStringSegment.h \
    Src/OSGeo/Geometry/mgILineStringSegmentImp.cpp \
    Src/OSGeo/Geometry/mgILineStringSegmentImp.h \
    Src/OSGeo/Geometry/mgIMultiCurvePolygon.h \
    Src/OSGeo/Geometry/mgIMultiCurvePolygonImp.cpp \
    Src/OSGeo/Geometry/mgIMultiCurvePolygonImp.h \
    Src/OSGeo/Geometry/mgIMultiCurveString.h \
    Src/OSGeo/Geometry/mgIMultiCurveStringImp.cpp \
    Src/OSGeo/Geometry/mgIMultiCurveStringImp.h \
    Src/OSGeo/Geometry/mgIMultiGeometry.h \
    Src/OSGeo/Geometry/mgIMultiGeometryImp.cpp \
    Src/OSGeo/Geometry/mgIMultiGeometryImp.h \
    Src/OSGeo/Geometry/mgIMultiLineString.h \
    Src/OSGeo/Geometry/mgIMultiLineStringImp.cpp \
    Src/OSGeo/Geometry/mgIMultiLineStringImp.h \
    Src/OSGeo/Geometry/mgIMultiPoint.h \
    Src/OSGeo/Geometry/mgIMultiPointImp.cpp \
    Src/OSGeo/Geometry/mgIMultiPointImp.h \
    Src/OSGeo/Geometry/mgIMultiPolygon.h \
    Src/OSGeo/Geometry/mgIMultiPolygonImp.cpp \
    Src/OSGeo/Geometry/mgIMultiPolygonImp.h \
    Src/OSGeo/Geometry/mgIPoint.h \
    Src/OSGeo/Geometry/mgIPointImp.cpp \
    Src/OSGeo/Geometry/mgIPointImp.h \
    Src/OSGeo/Geometry/mgIPolygon.h \
    Src/OSGeo/Geometry/mgIPolygonImp.cpp \
    Src/OSGeo/Geometry/mgIPolygonImp.h \
    Src/OSGeo/Geometry/mgIRing.h \
    Src/OSGeo/Geometry/mgIRingAbstract.h \
    Src/OSGeo/Geometry/mgIRingAbstractImp.cpp \
    Src/OSGeo/Geometry/mgIRingAbstractImp.h \
    Src/OSGeo/Geometry/mgIRingImp.cpp \
    Src/OSGeo/Geometry/mgIRingImp.h \
    Src/OSGeo/Geometry/mgISurfaceAbstract.h \
    Src/OSGeo/Geometry/mgISurfaceAbstractImp.cpp \
    Src/OSGeo/Geometry/mgISurfaceAbstractImp.h \
    Src/OSGeo/Geometry/mgObjectFactory.cpp \
    Src/OSGeo/Geometry/mgObjectFactory.h \
    Src/OSGeo/Geometry/resource.h \
    Src/OSGeo/Geometry/stdafx.cpp \
    Src/OSGeo/Geometry/stdafx.h \
    Src/OSGeo/Runtime/Disposable.cpp \
    Src/OSGeo/Runtime/Disposable.h \
    Src/OSGeo/Runtime/ProtocolExt.h \
    Src/OSGeo/Spatial/resource.h \
    Src/OSGeo/Spatial/stdafx.cpp \
    Src/OSGeo/Spatial/stdafx.h \
    Src/OSGeo/Spatial/AssemblyVersion.cpp \
    Src/OSGeo/Spatial/AssemblyInfo.cpp \
    Src/OSGeo/Spatial/MgSpatial.rc \
    Src/OSGeo/Spatial/mgSpatialGeometryValidity.h \
    Src/OSGeo/Spatial/mgSpatialGridTransform.cpp \
    Src/OSGeo/Spatial/mgSpatialGridTransform.h \
    Src/OSGeo/Spatial/mgSpatialUtility.cpp \
    Src/OSGeo/Spatial/mgSpatialUtility.h
