AUTOMAKE_OPTIONS = foreign

SUBDIRS = Src Inc

EXTRA_DIST = \
  TestData/SetupTestData.perl  \
  TestData/Australia/Defect64335202A.txt  \
  TestData/Australia/Defect64335202.dbf  \
  TestData/Australia/Defect64335202.shp  \
  TestData/Australia/Defect64335202.shx  \
  TestData/Australia/Parcels.dbf  \
  TestData/Australia/Parcels.prj  \
  TestData/Australia/Parcels.shp  \
  TestData/Australia/Parcels.shx  \
  TestData/Australia/roads.dbf  \
  TestData/Australia/roads_readme.txt  \
  TestData/Australia/roads.sbn  \
  TestData/Australia/roads.sbx  \
  TestData/Australia/roads.shp  \
  TestData/Australia/roads.shx  \
  TestData/Australia/Soils.dbf  \
  TestData/Australia/Soils.prj  \
  TestData/Australia/Soils.shp  \
  TestData/Australia/Soils.shx  \
  TestData/Metadcov/Trees.dbf  \
  TestData/Metadcov/Trees.prj  \
  TestData/Metadcov/Trees.shp  \
  TestData/Metadcov/Trees.shx